--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,9 @@
 theme: jekyll-theme-minimal
+gem "github-pages", group::jekyll_plugins
 
-gem "github-pages", group: :jekyll_plugins
+title: [The title of your site]
+description: [A short description of your site's purpose]
+
+logo: [Location of the logo]
+show_downloads: true % ["true" or "false" to indicate whether to provide a download URL]
+google_analytics: tigerjhmoon
